# rust-mcp-linkedin

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  tool-manifest.json
src/: config.rs  main.rs
src/linkedin/: client.rs  error.rs  models.rs
src/mcp/: error.rs  models.rs
src/server/: handler.rs  mod.rs  tools.rs
src/utils/: logging.rs  old_main.rs
