[package]
name = "linked-in-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
chrono = {version="0.4.41", features = ["serde"]}
config = "0.15.11"
dotenv = "0.15.0"
reqwest = {version="0.12.15", features = ["json"]}
rmcp = { version = "0.1.5", features = [
  "server",
  "transport-sse-server",
  "macros",
] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"]}
tower = "0.5.2"
tower-http = {version = "0.6.4", features = ["cors", "trace"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
